<resources>

    <string name="app_name">LGReplay</string>
    <string name="open_precondition_file">Open Precondition File</string>
    <string name="open_replay_file">Open Replay File(.rep)</string>
    <string name="save_replay_file">Save Replay File(.rep)</string>
    <string name="exit">Exit</string>
    <string name="set_starting_time">Set Starting Time</string>
    <string name="enable_replay_panel">Enable Replay Panel</string>
    <string name="disable_replay_panel">Disable Replay Panel</string>
    
    <string name="replay">Replay</string>
    <string name="no_replay_list">No replay list. You must open a rep file</string>
    

</resources>